Spring version upgrade. Use jUnit5 only.